# verba

./: .gitignore  README.md  build.bat  hash_registry.py  pyproject.toml  registry.json  test_suite.vrb  verba.spec  verba_main.py  verbix.config.json  verbix.spec  verbix_main.py
docs/: index.html  packages.html
examples/: advanced.vb  advanced.vrb  concise_test.vb  defaults.vrb  file_io.vb  full_example.vb  full_example.vrb  functional_lists.vrb  functional_maps.vrb  gui_task_manager.vrb  http_server.vrb  lists_and_loops.vrb  math_and_else.vb  math_and_else.vrb  modern_options.vrb  my_module.vb  options.vrb  parallel_match.vrb  pattern-star.vb  pattern-star.vrb  pattern_star.vrb  pointers.vrb  scraper.vrb  secure_server.vrb  table.vrb  test.vb  test.vrb  test_enum.vrb  test_new_features.vb  test_new_features.vrb  use_browser.vrb  use_express.vrb  use_http.vrb
examples/patterns/: checkerboard.vrb  diamond.vrb  floyd-triangle.vrb  hollow-square.vrb  inverted-pyramid.vrb  inverted-triangle.vrb  left-triangle.vrb  number-triangle.vrb  pyramid.vrb  right-triangle.vrb
examples/webapp/: add_todo.vrb  calc.vrb  clear_todos.vrb  index.html  list_todos.vrb  server.py  server.vrb
modules/: .registry.json  date_helper.vrb  math_plus_v1.1.vrb  math_plus_v1.4.0.vrb  math_plus_v2.1.0.vrb
verba/: __init__.py  __main__.py  ast.py  cli.py  errors.py  parser.py  pkg.py  runtime.py  runtime_types.py  tokenize.py  verbix_cli.py
verba/stdlib/: browser.py  data.py  db.py  express.py  gui.py  http.py  math.py  pkg.py  (+1 more)
verba_packages/: index.json  mathkit-1.0.0.vrb  mathkit-2.0.0.vrb
