[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verba-lang"
version = "1.5.0"
description = "Verba — a natural English programming language interpreter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Verba Contributors" }]
dependencies = []

[project.scripts]
verba = "verba.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["verba*"]
